packages/iap-gateway/base/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"http2":"iap-backendconfig"}}'
    cloud.google.com/neg: '{"ingress":false}'
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
    istio.io/rev: asm-191-1
    release: istio
spec:
  # TODO(jlewi):  Why are we hardcoding the ports here? With ASM I believe the service
  # gets created by the gateway defined by ASM.
  # 
  ports:
    - name: status-port
      port: 15020
      protocol: TCP
      targetPort: 15020
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: kiali
      port: 15029
      protocol: TCP
      targetPort: 15029
    - name: prometheus
      port: 15030
      protocol: TCP
      targetPort: 15030
    - name: grafana
      port: 15031
      protocol: TCP
      targetPort: 15031
    - name: tracing
      port: 15032
      protocol: TCP
      targetPort: 15032
    - name: tls
      port: 15443
      protocol: TCP
      targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: NodePort
# ---
# apiVersion: rbac.istio.io/v1alpha1
# kind: ClusterRbacConfig
# metadata:
#   name: default
# spec:
#   mode: ON_WITH_EXCLUSION
#   exclusion:
#     namespaces:
#     - istio-system
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: deny-all
# spec:
#   {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  # Setting this policy makes all traffic to be allowed by default.
  # If this policy is not set, then as long as there is any explicit policy added in the mesh,
  # istio will implicitly deny all traffic unless they are in the explicit policy.
  name: allow-all-traffic
  # If set namespace value to the root namespace, the policy applies to all namespaces in a mesh. 
  # The value of the root namespace is configurable, and the default is istio-system. If set to any other namespace, the policy only applies to the specified namespace.
  namespace: istio-system 
spec:
  action: ALLOW
  # If rules is set but no content inside, all traffic will match this policy and is allowed.
  # If rules is not set, then nothing match this policy, therefore all traffic will be denied.
  rules: 
  - {}
